...
final class ProfileViewController: UIViewController & ProfileViewControllerProtocol {
    
    lazy var presenter: ProfilePresenterProtocol = ProfileViewPresenter(view: self)
    
    @objc func logoutButtonTapped() {
        let alertController = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            preferredStyle: .alert
        )
        
        let yesAction = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            self?.performLogout()
        }
        
        let noAction = UIAlertAction(title: "Нет", style: .default, handler: nil)
        
        alertController.addAction(yesAction)
...
